argocd/applications/graf/graf-metallb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graf-metallb
  namespace: graf
  annotations:
    metallb.universe.tf/address-pool: metallb-ip-pool
spec:
  type: LoadBalancer
  selector:
    serving.knative.dev/service: graf
  ports:
    - name: http
      port: 80
      targetPort: 8080
