argocd/applications/graf/neo4j-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: graf-neo4j
  namespace: graf
  labels:
    app: graf
    helm.neo4j.com/instance: graf
    helm.neo4j.com/service: default
spec:
  type: ClusterIP
  selector:
    app: graf
    helm.neo4j.com/instance: graf
  ports:
    - name: tcp-bolt
      protocol: TCP
      port: 7687
      targetPort: 7687
    - name: tcp-http
      protocol: TCP
      port: 7474
      targetPort: 7474
    - name: tcp-https
      protocol: TCP
      port: 7473
      targetPort: 7473
