argocd/applications/graf/tailscale-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graf-tailscale
  namespace: graf
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: graf
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    serving.knative.dev/service: graf
  ports:
    - name: http
      port: 80
      targetPort: 8080
