argocd/applications/graf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: graf
  namespace: graf
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`graf.lan`)
      services:
        - name: graf
          port: 80
